<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="Регистрация"
        android:textSize="22dp"
        tools:ignore="DuplicateIds" />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastname"
        android:hint="@string/lastname"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/rubik"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/orange"
        android:textSize="21sp"
        app:met_baseColor="@color/white"

        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/orange"
        />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstname"
            android:hint="@string/firstname"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/rubik"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/orange"
            android:textSize="21sp"
            app:met_baseColor="@color/white"

            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/orange"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:hint="@string/phone"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/rubik"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/orange"
            android:textSize="21sp"
            app:met_baseColor="@color/white"

            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/orange"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/rubik"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/orange"
            android:textSize="21sp"
            app:met_baseColor="@color/white"

            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/orange"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/rubik"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/orange"
            android:textSize="21sp"
            app:met_baseColor="@color/white"

            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/orange"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/rubik"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/orange"
            android:textSize="21sp"
            app:met_baseColor="@color/white"

            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/orange"
            />
        <Button
            android:id="@+id/buttonAuto"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:fontFamily="@font/rubik_bold"
            android:textSize="14dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_reg"
            android:shadowRadius="@integer/google_play_services_version"
            android:text="@string/button_reg"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_gravity="center"
            tools:ignore="MissingConstraints">
            <TextView
                android:id="@+id/hello"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="Уже есть аккаунт?"
                android:textAlignment="textStart"
                android:textColor="@color/gray"
                android:textSize="12dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"></TextView>
            <TextView
                android:layout_width="105dp"
                android:layout_height="30dp"
                android:textAlignment="textStart"
                android:textColor="@color/lilac"
                android:textSize="12dp"
                android:fontFamily="@font/rubik_bold"
                android:text="Авторизация"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"></TextView>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>